force-app/main/default/objects/convsta_Requis_au_diplome__c/convsta_Requis_au_diplome__c.object-meta.xml
<CustomObject>
    <description>Inactif en attendant l&apos;hypothétique dévelopement du service cursus permettant d&apos;obtenir le nombre de jour/semaine de stage déja effectué par l&apos;étudiant

Contient le nombre de mois d&apos;expérience pour le requis au diplôme, le code programme et le préfixe du code étudiant ; dans le cadre du projet Convsta</description>
    <label>Requis au diplôme</label>
    <nameField>
        <label>Requis au dipôme</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requis au diplôme</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>