force-app/main/default/objects/convsta_Requis_au_diplome__c/fields/Annee_Application__c.field-meta.xml
<CustomField>
    <fullName>Annee_Application__c</fullName>
    <description>Les 4 premiers caractères du code étudiant des étudiants concernés</description>
    <label>Préfixe du code étudiant</label>
    <length>4</length>
    <type>Text</type>
</CustomField>