force-app/main/default/objects/convsta_Requis_au_diplome__c/listViews/Tous.listView-meta.xml
<ListView>
    <fullName>Tous</fullName>
    <columns>NAME</columns>
    <columns>Programme__c</columns>
    <columns>Annee_Application__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous</label>
</ListView>